

                                        XFLR5

                     A tool for the design of Airfoils, Wings and Planes
                          operating at low Reynolds numbers

				 Copyright (C) 2003-2015

                                     Andre Deperrois


*******************************************************************************



xflr5 v6.11 July 19th, 2015
	- added inertia data as parameters in stability analysis
	- added more display options for curve points
	- replaced the deprecated QGLWidget by the new QOpenGLWidget recommended in Qt5.4
	- added a new editor for the plane object
	- added a new editor for the body object
	- reviewed in depth the 2D rendering system to separate viewing operations from the analysis part
	- replaced the rendertext methods in OpenGL by custom implementations to improve the rendering quality
	- improved the issue of the plane-fin intersection when the body is translated
	- enabled launching xflr5 from a project file, and opening the model
	- added an import/export option of a plane definition to an xml file
	- added an import/export option for body objects to an xml file
	- deeeeep code cleaning
	- Other minor corrections and improvements


xflr5 v6.10.04 April 12th, 2015
	- Corrected a potential crash bug when deleting a plane with polars
	- Added a standard ISA model for the calculation of air properties
        - Corrected the issues with the reference lengths after wing scaling
        - Fixed the bugs related to the import operation of a body definition from a text file
        - Fix for retina displays on OS X
        - Corrected the export of plane polars to text files to include the sideslip variable
        - Other minor corrections and improvements



xflr5 v6.10.03 April 13th, 2014
	- Corrected the incorrect calculation of the mid camber line of foil with flaps
	- Corrected the crash bug when calculating a wing with flaps using the LLT method